--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 /*=======================*/
 /*Alert Message Section*/
 /* The alert message box */
-/*.alert {
+.alert {
   padding: 20px;
   background-color: #f44336;
   color: white;
